spec/fixtures/layout/invalid/parent-bad-syntax.erb
parent line 1 - missing closing ] below
<%= yield %>
<% if ENV[TEST %>
parent content
<% end %>
parent line 6
